UPPERCASE ALL THE REFS.

--- a/index.html
+++ b/index.html
@@ -2791,6 +2791,12 @@ for their editorial input.</p>
      <li><a href="https://dom.spec.whatwg.org#concept-event">event</a>
     </ul>
    <li>
+    <a data-link-type="biblio" href="#biblio-hr-time-2">[hr-time-2]</a> defines the following terms:
+    <ul>
+     <li><a href="http://w3c.github.io/hr-time/#dom-domhighrestimestamp">DOMHighResTimeStamp</a>
+     <li><a href="http://w3c.github.io/hr-time/#time-origin">time origin</a>
+    </ul>
+   <li>
     <a data-link-type="biblio" href="#biblio-html">[HTML]</a> defines the following terms:
     <ul>
      <li><a href="https://html.spec.whatwg.org/multipage/webappapis.html#eventhandler">EventHandler</a>
@@ -2810,6 +2816,25 @@ for their editorial input.</p>
      <li><a href="https://html.spec.whatwg.org/multipage/webappapis.html#concept-events-trusted">trusted</a>
     </ul>
    <li>
+    <a data-link-type="biblio" href="#biblio-page-visibility">[page-visibility]</a> defines the following terms:
+    <ul>
+     <li><a href="https://w3c.github.io/page-visibility#dfn-steps-to-determine-the-visibility-state">steps to determine the visibility state</a>
+     <li><a href="https://w3c.github.io/page-visibility#dfn-visibility-states">visibility states</a>
+    </ul>
+   <li>
+    <a data-link-type="biblio" href="#biblio-permissions">[permissions]</a> defines the following terms:
+    <ul>
+     <li><a href="https://w3c.github.io/permissions/#dfn-associated-permissiondescriptor">associated permissiondescriptor</a>
+     <li><a href="https://w3c.github.io/permissions/#idl-def-Permission">permission</a>
+     <li><a href="https://w3c.github.io/permissions/#idl-def-PermissionState">permission state</a>
+     <li><a href="https://w3c.github.io/permissions/#dfn-retrieve-the-permission-state">retrieving the permission state</a>
+    </ul>
+   <li>
+    <a data-link-type="biblio" href="#biblio-powerful-features">[powerful-features]</a> defines the following terms:
+    <ul>
+     <li><a href="https://w3c.github.io/webappsec/specs/powerfulfeatures/#secure-context">secure context</a>
+    </ul>
+   <li>
     <a data-link-type="biblio" href="#biblio-webidl">[WebIDL]</a> defines the following terms:
     <ul>
      <li><a href="https://heycam.github.io/webidl/#dfn-create-exception">creating an exception</a>
@@ -2825,31 +2850,6 @@ for their editorial input.</p>
      <li><a href="https://dom.spec.whatwg.org/#dictdef-eventinit">EventInit</a>
      <li><a href="https://dom.spec.whatwg.org/#concept-document">document</a>
      <li><a href="https://dom.spec.whatwg.org/#concept-document-type">type</a>
-    </ul>
-   <li>
-    <a data-link-type="biblio" href="#biblio-hr-time-2">[hr-time-2]</a> defines the following terms:
-    <ul>
-     <li><a href="http://w3c.github.io/hr-time/#dom-domhighrestimestamp">DOMHighResTimeStamp</a>
-     <li><a href="http://w3c.github.io/hr-time/#time-origin">time origin</a>
-    </ul>
-   <li>
-    <a data-link-type="biblio" href="#biblio-page-visibility">[page-visibility]</a> defines the following terms:
-    <ul>
-     <li><a href="https://w3c.github.io/page-visibility#dfn-steps-to-determine-the-visibility-state">steps to determine the visibility state</a>
-     <li><a href="https://w3c.github.io/page-visibility#dfn-visibility-states">visibility states</a>
-    </ul>
-   <li>
-    <span>[permissions-api]</span> defines the following terms:
-    <ul>
-     <li><a href="https://w3c.github.io/permissions/#dfn-associated-permissiondescriptor">associated permissiondescriptor</a>
-     <li><a href="https://w3c.github.io/permissions/#idl-def-Permission">permission</a>
-     <li><a href="https://w3c.github.io/permissions/#idl-def-PermissionState">permission state</a>
-     <li><a href="https://w3c.github.io/permissions/#dfn-retrieve-the-permission-state">retrieving the permission state</a>
-    </ul>
-   <li>
-    <a data-link-type="biblio" href="#biblio-powerful-features">[powerful-features]</a> defines the following terms:
-    <ul>
-     <li><a href="https://w3c.github.io/webappsec/specs/powerfulfeatures/#secure-context">secure context</a>
     </ul>
   </ul>
   <h2 class="no-num no-ref heading settled" id="references"><span class="content">References</span><a class="self-link" href="#references"></a></h2>
