--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@ dictionary <dfn class="dfn-paneled idl-code" data-dfn-type="dictionary" data-exp
      <p>If <var>state</var> is "prompt",</p>
      <ol>
       <li data-md="">
-       <p>Prompt the user in a user-agent-specific manner for permission to provide access to <var>sensor</var></p>
+       <p>prompt the user in a user-agent-specific manner for permission to provide access to <var>sensor</var></p>
       <li data-md="">
        <p>If permission is granted,</p>
        <ol>
