--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@ dictionary <dfn class="dfn-paneled idl-code" data-dfn-type="dictionary" data-exp
     <dt data-md="">
      <p>output</p>
     <dd data-md="">
-     <p>a <a data-link-type="dfn" href="https://w3c.github.io/permissions/#idl-def-PermissionState">permission state</a>.</p>
+     <p><var>state</var>, a <a data-link-type="dfn" href="https://w3c.github.io/permissions/#idl-def-PermissionState">permission state</a>.</p>
    </dl>
    <ol>
     <li data-md="">
