Make echidna happy.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
      <dt>Latest version:
      <dd><a href="http://www.w3.org/TR/generic-sensor/">http://www.w3.org/TR/generic-sensor/</a>
      <dt>Previous Versions:
-     <dd><a href="https://www.w3.org/TR/2015/WD-generic-sensor-20151015/" rel="previous">https://www.w3.org/TR/2015/WD-generic-sensor-20151015/</a>
+     <dd><a href="http://www.w3.org/TR/2015/WD-generic-sensor-20151015/" rel="previous">http://www.w3.org/TR/2015/WD-generic-sensor-20151015/</a>
      <dt>Version History:
      <dd><a href="https://github.com/w3c/sensors/commits/gh-pages/index.bs">https://github.com/w3c/sensors/commits/gh-pages/index.bs</a>
      <dt>Feedback:
