Add direct link to level 2 issue tracker.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
      <dt>Issue Tracking:
      <dd><a href="https://github.com/w3c/sensors/issues/">GitHub</a>
      <dd><span><a href="https://github.com/w3c/sensors/milestones/Level%201">Level 1 Issues</a></span>
+     <dd><span><a href="https://github.com/w3c/sensors/milestones/Level%202">Level 2 Issues</a></span>
      <dt class="editor">Editors:
      <dd class="editor p-author h-card vcard" data-editor-id="78102"><a class="p-name fn u-email email" href="mailto:tobie@sensors.codespeaks.com">Tobie Langel</a> (<span class="p-org org">Intel Corporation</span>)
      <dd class="editor p-author h-card vcard"><span class="p-name fn">Rick Waldron</span> (<span class="p-org org">jQuery Foundation</span>)
