--- a/index.html
+++ b/index.html
@@ -1753,6 +1753,11 @@ and allowing the user to disable it.</p>
    <p>Web application developers that use <a data-link-type="dfn" href="#concept-sensor" id="ref-for-concept-sensor-11">sensors</a> should
 perform a privacy assessment of their application
 taking all aspects of their application into consideration.</p>
+   <p>Ability to detect a full working set of sensors on a device can form an
+identifier and could be used to fingerprinting.</p>
+   <p>A combination of selected sensors can potentially be used to form an out of
+band communication channel between devices.</p>
+   <p>Sensors can potentially be used in cross-device linking and tracking of a user.</p>
    <h3 class="heading settled" data-level="5.1" id="browsing-context"><span class="secno">5.1. </span><span class="content">Browsing Context</span><a class="self-link" href="#browsing-context"></a></h3>
    <p><a data-link-type="dfn" href="#sensor-readings" id="ref-for-sensor-readings-2">Sensor readings</a> must only be available in the <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/browsers.html#top-level-browsing-context">top-level browsing context</a> to avoid the privacy risk of
 sharing the information defined in this specification
