--- a/index.html
+++ b/index.html
@@ -1766,7 +1766,7 @@ creating unanticipated tracking mechanisms.</p>
 an indication of when the <a data-link-type="dfn" href="#concept-sensor" id="ref-for-concept-sensor-10">sensor</a> is used
 and allowing the user to disable it.</p>
    <p>Web application developers that use <a data-link-type="dfn" href="#concept-sensor" id="ref-for-concept-sensor-11">sensors</a> should
-perform a privacy assessment of their application
+perform a privacy impact assessment of their application
 taking all aspects of their application into consideration.</p>
    <p>Ability to detect a full working set of sensors on a device can form an
 identifier and could be used to fingerprinting.</p>
